syntax = "proto3";

package chat;

message ChatState {
    string name = 1;
    repeated Struct messages = 2;
}

message AddMessageRequest {
    string chat_name = 1;
    string sender = 2;
    string content = 3;
}

message AddMessageResponse {
    
}

message CreateRequest {
    string chat_name = 1;
}

message CreateResponse {
    
}

message FetchMessagesRequest {
    uint64 index = 1;
}

message FetchMessagesResponse {
    repeated Struct messages = 1;
}